添加25条主流链配置
